--- a/css/bootstrap-style.css
+++ b/css/bootstrap-style.css
@@ -1,5 +1,5 @@
 body {
-                background-image: url(/bootstrap.jpg);
+                background-image: url(../bootstrap.jpg);
                 background-repeat: no-repeat;
                 background-position: center;
                 background-size: cover;
